2003-02-18  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/importer.py (ExtInPkgImporter.getmod): some
	impossible code fixed; it got called on one machine and not
	another, for mysterious reasons.

2003-02-17  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/SocketMan/SocketMan.py (SocketMan.addConnection): code
	to delete unix socket files if they are hanging around where we
	expect to create them; other files don't get deleted.

	* SkunkWeb/Services/httpd/protocol.py
	(HTTPMethodRequestParser._getEnv):  permit httpd service to be run
	on a UNIX socket, as requested by Remi Delon. 

2003-02-11  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/argextract.py (extract_args): fix for default values.

2003-02-11 Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/vfs/importer.py (VFSOwner.getmod): Package imports were
	broken, but now they seem to work.

2003-02-08  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler/FSSessionStore.py
	(FSSessionStoreImpl.__setPickle): wrapping calls to the pickler in
	try/except so the pickle files will be unlocked even in the case
	of error.

2003-02-08 Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/product/loader.py (get_product_path): added
	useful little function.

2003-02-08  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/xmlrpchandler.py: fix for methodSignature, whose purpose
	had been misunderstood.  The original implementation, which
	returned the *call* signature of the underlying Python method, 
	is retained as system.methodPydoc.

2003-02-07 Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/vfs/rosio.py (RO_StringIO.__iter__): removed xreadlines, since
	it produces a DeprecationWarning with Python 2.3a1.

2003-02-07 Jacob Smullyan <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/UrlBuilder.py: now XHTML-compliant
	by default.  

	* pylibs/PyDO/mysqlconn.py (PyDOMySQL.sqlStringAndValue): fix for NULL.
